# PyLuxel

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: basic_window.py  custom_shapes.py  effects_showcase.py  rectangles.py  shadow_demo.py  shapes.py  stickman.py
pyluxel/: __init__.py  __main__.py
pyluxel/animation/: __init__.py  animator.py  bone.py  model_io.py  presets.py  state_machine.py  stickman.py
pyluxel/app/: __init__.py  shapes.py  text.py
pyluxel/audio/: __init__.py  manager.py
pyluxel/cli/: __init__.py  pak_cmd.py
pyluxel/core/: __init__.py  camera.py  event_bus.py  pak.py  paths.py  post_fx.py  renderer.py  resolution.py  scene.py  sprite_batch.py  texture_manager.py  timer.py
pyluxel/debug/: __init__.py  cprint.py  gpu_stats.py
pyluxel/docs/: animation.md  api-reference.md  app.md  audio-input.md  effects.md  events.md  getting-started.md  index.md  networking.md  pak.md  rendering.md  text.md  ui.md  world.md
pyluxel/effects/: __init__.py  fog.py  lighting.py  particles.py  transition.py
pyluxel/input/: __init__.py  manager.py
pyluxel/net/: __init__.py  channel.py  lobby.py  manager.py  node.py  peer.py  protocol.py  rpc.py  steam_api.py  steam_p2p.py  sync.py  transport.py  transport_steam.py
pyluxel/physics/: __init__.py  collision.py
pyluxel/shaders/: __init__.py  bloom_down.frag  bloom_up.frag  combine.frag  fog.frag  light.frag  light.vert  particle.frag  particle.vert  post_process.frag  screen.frag  sdf_capsule.frag  sdf_circle.frag  sdf_polygon.frag  sdf_rect.frag  sdf_shape.vert  sdf_star.frag  (+8 more)
(+29 files in other folders)
